--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/6093b571-90ca-4e2d-9f25-e5a885d99601-bot-58506-malbec-pure-gold-desodorante-colonia-02.webp" alt="Perfume">
         <h3>Malbec Pure Gold Desodorante Colônia 100Ml</h3>
-        <p><span class="preco-antigo">R$ 239,90</span> <span class="preco-novo">R$ 200,00</span></p>
+        <p>
+          <span class="preco-antigo">R$ 239,90</span>
+          <span class="preco-novo">R$ 200,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 119,95 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
@@ -47,7 +51,11 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/1af375cb-0fb1-462e-916a-da119ae9e243-malbec-black-desodorante-colonia-100ml.webp" alt="Perfume">
         <h3>Malbec Black Desodorante Colônia 100Ml</h3>
-        <p><span class="preco-antigo">R$ 249,90</span> <span class="preco-novo">R$ 200,00</span></p>
+        <p>
+          <span class="preco-antigo">R$ 249,90</span>
+          <span class="preco-novo">R$ 200,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 124,95 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
@@ -55,7 +63,11 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/f896176d-a231-445a-80b1-d00b64780432-bot-84390-malbec-magnetic-desodorante-colonia-frontal-01.webp" alt="Perfume">
         <h3>Malbec Magnetic Desodorante Colônia 100Ml</h3>
-        <p><span class="preco-antigo">R$ 239,90</span> <span class="preco-novo">R$ 200,00</span></p>
+        <p>
+          <span class="preco-antigo">R$ 239,90</span>
+          <span class="preco-novo">R$ 200,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 119,95 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
@@ -75,7 +87,11 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/c3174ec1-3f99-4502-b6b9-046264ada2ec-bot-55648-men-nba-desodorante-colonia-02.webp" alt="Perfume">
         <h3>Men Nba Desodorante Colônia 100Ml</h3>
-        <p><span class="preco-antigo">R$ 179,90</span> <span class="preco-novo">R$ 120,00</span></p>
+        <p>
+          <span class="preco-antigo">R$ 179,90</span>
+          <span class="preco-novo">R$ 120,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+          </p>
+        <p class="preco-parcelado">ou 2x de R$ 89,95 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
@@ -83,7 +99,11 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/br-11134201-23030-km4jucpzvkov4f.jpg" alt="Perfume">
         <h3>Perfume Natura Essencial OUD Feminino 100 ml Deo Parfum</h3>
-        <p><span class="preco-antigo">R$ 278,90</span> <span class="preco-novo">R$ 200,00</span></p>
+        <p>
+          <span class="preco-antigo">R$ 278,90</span>
+          <span class="preco-novo">R$ 200,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 139,45 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
@@ -91,7 +111,11 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/NATBRA-76423_2.jpg" alt="Perfume">
         <h3>Essencial Exclusivo Feminino 100 ml Deo Parfum</h3>
-        <p><span class="preco-antigo">R$ 278,90</span> <span class="preco-novo">R$ 200,00</span></p>
+        <p>
+          <span class="preco-antigo">R$ 278,90</span>
+          <span class="preco-novo">R$ 200,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 139,45 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
@@ -99,14 +123,23 @@
         <div class="promo-tag">Promoção</div>
         <img src="./image/85323GG.jpg" alt="Perfume">
         <h3>Boticoll Crazy Des Col Feelings V2 100Ml</h3>
-        <p><span class="preco-antigo">R$ 154,90</span> <span class="preco-novo">R$ 120,00</span></p>
+        <p>
+          <span class="preco-antigo">R$ 154,90</span>
+          <span class="preco-novo">R$ 120,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 77,45 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card">
+      <div class="card" data-category="promocao">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/dc3c1f13-3d21-4274-9d50-4be908bb3f35-74438.webp" alt="Perfume">
         <h3>Arbo Desodorante Colônia 100Ml</h3>
-        <p>R$ 124,90</p>
+        <p>
+          <span class="preco-antigo">R$ 174,90</span>
+          <span class="preco-novo">R$ 124,90</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 87,45 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
