--- a/index.html
+++ b/index.html
@@ -143,24 +143,39 @@
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card">
+      <div class="card" data-category="promocao">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/4101f6c8-c76a-49da-804f-c2eb9aa3918a-e87380-lyra-happy-des-col-75ml-1.webp" alt="Perfume">
         <h3>Lyra Happy Desodorante Colônia 75Ml</h3>
-        <p>R$ 120,00</p>
+        <p>
+          <span class="preco-antigo">R$ 159,90 </span>
+          <span class="preco-novo">R$ 119,90</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 79,95 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card">
+      <div class="card" data-category="promocao">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/5aaab5f7-23ef-4408-8d93-f2f523ae51a5-colonia-des-diva-e93544-fechado.webp" alt="Perfume">
         <h3>Diva Desodorante Colônia 100Ml</h3>
-        <p>R$ 110,00</p>
+        <p>
+          <span class="preco-antigo">R$ 139,90  </span>
+          <span class="preco-novo">R$ 110,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 2x de R$ 55,00 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
-      <div class="card">
+      <div class="card" data-category="promocao">
+        <div class="promo-tag">Promoção</div>
         <img src="./image/3490a49c-cd41-4795-b2da-8b0ad726584f-bot-52041-lily-lumiere-desodorante-antitranspirante-aerossol-frontal-01.webp" alt="Perfume">
         <h3>Desodorante Antitranspirante Aerosol Lily Lumière 75G/125Ml</h3>
-        <p>R$ 30,00</p>
+        <p>
+          <span class="preco-antigo">R$ 37,90  </span>
+          <span class="preco-novo">R$ 30,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+        </p>
+        <p class="preco-parcelado">ou 1x de R$ 37,90 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
 
