--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-  <header></header>
+  <header>
+    <img src="./image/capa_mmb.png" alt="Capa MMB">
+  </header>
 
   <nav id="main-nav">
     <a href="#" data-filter="all">Todos</a>
