--- a/index.html
+++ b/index.html
@@ -470,18 +470,24 @@
         <p class="preco-pix">ou 1x de R$ 35,90 sem juros no cartão</p>
         <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
       </div>
-
       <div class="card">
         <div class="promo-tag">Promoção</div>
         <img src="./image/NATBRA-2830_1.jpg" alt="sabonete" class="zoomable">
         <h3>Sabonete em Barra Puro Vegetal Tododia Algodão</h3>
         <p>
-          <span class="preco-antigo">R$ 34,90</span>
-          <span class="preco-novo">R$ 28,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
+            <span class="preco-antigo">R$ 34,90</span>
+            <span class="preco-novo">R$ 28,00</span> <p class="preco-pix">(à vista: dinheiro ou Pix)</p>
         </p>
         <p class="preco-pix">ou 1x de R$ 34,90 sem juros no cartão</p>
-        <a class="btn-comprar" href="https://wa.me/qr/AIZ4RFGKEVIMI1" target="_blank">Comprar</a>
-      </div>
+        
+        <a 
+            class="btn-comprar" 
+            href="https://wa.me/qr/AIZ4RFGKEVIMI1?text=Olá!%20Quero%20comprar%20o%20produto:%20Sabonete%20em%20Barra%20Puro%20Vegetal%20Tododia%20Algodão,%20pelo%20preço%20de%20R$%2028,00." 
+            target="_blank"
+        >
+            Comprar
+        </a>
+    </div>
 
     </div>
   </main>
